// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "hot",
  "hasKeyChain": false,
  "hiveEngineTokensProperties": Object {},
  "intro": true,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "row",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "",
  "theme": "day",
  "usePrivate": true,
}
`;

exports[`2- location change. should change filter and tag 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hiveEngineTokensProperties": Object {},
  "intro": true,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "row",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "day",
  "usePrivate": true,
}
`;

exports[`3- theme change 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hiveEngineTokensProperties": Object {},
  "intro": true,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "row",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`4- hide intro 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hiveEngineTokensProperties": Object {},
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "row",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`5- list style change 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": false,
  "hiveEngineTokensProperties": Object {},
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "grid",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`6- Has keychain act 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hiveEngineTokensProperties": Object {},
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "grid",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`7- Mute notifications act 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hiveEngineTokensProperties": Object {},
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "grid",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": false,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`8- Unmute notifications act 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hiveEngineTokensProperties": Object {},
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "en-US",
  "listStyle": "grid",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`9- Set lang act 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hiveEngineTokensProperties": Object {},
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "tr-TR",
  "listStyle": "grid",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": false,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;

exports[`10- Set nsfw act 1`] = `
Object {
  "acceptLanguage": Array [
    Object {
      "languageCode": "en-US",
      "priority": 1,
    },
  ],
  "acceptableLanguage": Object {
    "en": true,
    "en-US": true,
  },
  "canUseWebp": false,
  "currency": "hbd",
  "currencyPrecision": 3,
  "currencyRate": 1,
  "currencySymbol": "$",
  "filter": "trending",
  "hasKeyChain": true,
  "hiveEngineTokensProperties": Object {},
  "intro": false,
  "isElectron": false,
  "isMobile": false,
  "lang": "tr-TR",
  "listStyle": "grid",
  "negotiatedLanguages": Array [
    "en-US",
  ],
  "newVersion": null,
  "notifications": true,
  "nsfw": true,
  "searchIndexCount": 0,
  "search_requests_allowed": 0,
  "tag": "bitcoin",
  "theme": "night",
  "usePrivate": true,
}
`;
